News UAT/force-app/main/default/objects/Item_for_Management_Attention__c/Item_for_Management_Attention__c.object-meta.xml
<CustomObject>
    <description>Items for Management Attention</description>
    <label>Item for Management Attention</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Item for Management Attention Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Items for Management Attention</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>