News UAT/force-app/main/default/objects/Item_for_Management_Attention__c/fields/Actions_Taken__c.field-meta.xml
<CustomField>
    <fullName>Actions_Taken__c</fullName>
    <description>Actions Taken</description>
    <label>Actions Taken</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>