News UAT/force-app/main/default/objects/Item_for_Management_Attention__c/fields/Status_Report__c.field-meta.xml
<CustomField>
    <fullName>Status_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Status Report</description>
    <label>Status Report</label>
    <referenceTo>Status_Report__c</referenceTo>
    <relationshipName>R00N80000002QnvsEAC</relationshipName>
    <type>Lookup</type>
</CustomField>